syntax = "proto3";

message GetShopPageFurnitureData {
    string page_id = 1;
}
