syntax = "proto3";

import "Shop/Furniture/ShopFurnitureData.proto";

message ShopPageFurnitureData {
    string page_id = 1;
    repeated ShopFurnitureData furniture = 2;
}
